# governator

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  rename.py  requirements-dev.txt
docs/: erd.plantuml
examples/: simple.py
governator/: __init__.py  cli.py  config.py  utils.py
governator/core/: action.py  base.py  catalog.py  column.py  database.py  database_connection.py  group.py  permission.py  project.py  relation.py  role.py  schema.py  user.py
governator/database_inferface/: base.py
